<resources>
    <string name="app_name">UniversalSeismicLogger</string>
    <string name="debug_tag">MyLogs</string>
    <string name="record_started">Record started!</string>
    <string name="record_paused">Record paused!</string>
    <string name="record_aborted">Record aborted!</string>
    <string name="record_stopped">Record stopped!</string>
    <string name="record_button_start">Start</string>
    <string name="record_button_pause">Pause</string>
    <string name="record_button_stop">Stop</string>
    <string name="record_button_continue">Continue</string>
    <string name="sample_rate">Sample rate</string>
    <string name="log_record_name">log name</string>
    <string name="recording_time">Recording time:</string>
    <string name="record_folder_path">Files are stored at path: </string>

    <string name="current_time">Current time: </string>
    <string name="current_location">Current location: </string>


    <string name="switch_use_mic">Use microphone data?</string>
    <string name="switch_audio_resource">Use UNPROCESSED audio source?</string>
    <string name="switch_use_gyroscope">Use gyroscope data?</string>
    <string name="switch_use_accelerometer">Use accelerometer data?</string>
    <string name="switch_use_compass">Use compass data?</string>

    <string name="file_saved_at_path">File is saved at path:</string>
    <string name="config_button">Config</string>
    <string name="back_button">Back</string>
    <string name="open_file_button">Open record folder</string>
    <string name="title_activity_test_nav">TestNavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_recording">Recording</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_folder">Folder</string>
    <string name="menu_information">Information</string>
    <string name="menu_share">Share</string>
    <string name="menu_rate">Rate the app</string>
    <string name="communicate">Communicate</string>

    <string name= "app_info">Данное приложение позволяет регистрировать упругие сейсмические волны при помощи доступных датчиков смартфона, таких как:\n •	Гироскоп\n
 •	Акселерометр\n
 •	Магнетометр\n
 •	Камеру\n
 •	И микрофон.\n
 При помощи перечисленных сенсоров происходит регистрация волн сразу с восьми каналов – по одному для микрофона и магнитометра, а также по три канала (оси X, Y, Z) для гироскопа и акселерометра.
 Помимо описанных датчиков также используется GPS для фиксации координат точки проведения измерений.\nПо вопросам и предложениям\n e-mail: novel.nastya@yandex.ru</string>
</resources>
