<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_recording"
            android:icon="@drawable/record"
            android:title="@string/menu_recording" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_folder"
            android:icon="@drawable/folder"
            android:title="@string/menu_folder" />

    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_information"
                android:icon="@drawable/help"
                android:title="@string/menu_information" />
            <item
                android:id="@+id/nav_share"
                android:icon="?attr/actionModeShareDrawable"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/star"
                android:title="@string/menu_rate" />
        </menu>
    </item>

</menu>