<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ConfigActivity"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar8"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/mautins"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="10dp"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sample_rate"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinnerSampleRate"
                android:layout_width="220dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="10dp"
                android:layout_height="50dp"
                android:layout_weight="0" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/log_record_name"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextLogName"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Rec"
                android:textColorHighlight="@color/enable_thumb_green"
                android:textColorLink="@color/colorPrimaryDark"
                android:textCursorDrawable="@color/colorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="15dp"
                android:layout_height="50dp" />

            <Switch
                android:id="@+id/switchUseMic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:enabled="false"
                android:text="@string/switch_use_mic"
                android:textSize="18sp"
                android:visibility="gone"
                android:theme="@style/SCBSwitch" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="10dp"
                android:layout_height="50dp" />

            <Switch
                android:id="@+id/switchUnprocessedMic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/switch_audio_resource"
                android:textSize="18sp"
                android:theme="@style/SCBSwitch"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="10dp"
                android:layout_height="50dp" />

            <Switch
                android:id="@+id/switchUseGyroscope"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/switch_use_gyroscope"
                android:textSize="18sp"
                android:theme="@style/SCBSwitch" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="10dp"
                android:layout_height="50dp" />

            <Switch
                android:id="@+id/switchUseAccelerometer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/switch_use_accelerometer"
                android:textSize="18sp"
                android:theme="@style/SCBSwitch" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="10dp"
                android:layout_height="50dp" />

            <Switch
                android:id="@+id/switchUseCompass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/switch_use_compass"
                android:textSize="18sp"
                android:theme="@style/SCBSwitch" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="155dp"
                android:layout_height="match_parent"
                android:layout_weight="0" />

            <Button
                android:id="@+id/button_back"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="0"
                android:background="@drawable/ok"
                android:onClick="onBackClick" />

            <Space
                android:layout_width="155dp"
                android:layout_height="match_parent"
                android:layout_weight="0" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>